[package]
name = "trading-management-system-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.136"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.1"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
